// Copyright 2018 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tasks;

option go_package = "go.chromium.org/luci/cipd/appengine/impl/cas/tasks";

// VerifyUpload task verifies data uploaded by a user and closes the upload
// session based on the result.
message VerifyUpload {
  int64 upload_operation_id = 1; // unwrapped integer ID of Operation entity
}

// CleanupUpload task cleans up garbage after canceled upload.
message CleanupUpload {
  int64 upload_operation_id = 1; // unwrapped integer ID of Operation entity
  string upload_url         = 2; // URL of the upload session to cancel
  string path_to_cleanup    = 3; // gs file to delete
  string user_project       = 4; // Cloud Project to use for GCS billing
}
